Updated the project from maven to gradle, made major improvements in each file