@@ -1,74 +1,69 @@
 package com.example.rentACarProject.business.concrates;
 
 import com.example.rentACarProject.business.abstracts.BrandService;
-import com.example.rentACarProject.business.requests.create.CreateBrandRequest;
-import com.example.rentACarProject.business.requests.update.UpdateBrandRequest;
-import com.example.rentACarProject.business.responses.GetAllBrandResponse;
-import com.example.rentACarProject.business.responses.GetByIdBrandResponse;
 import com.example.rentACarProject.business.rules.BrandBusinessRules;
-import com.example.rentACarProject.core.utilities.mapper.abstracts.ModelMapperService;
-import com.example.rentACarProject.dataAccess.abstracts.BrandRepository;
-import com.example.rentACarProject.entities.concrates.Brand;
+import com.example.rentACarProject.core.utility.exceptions.BusinessException;
+import com.example.rentACarProject.core.utility.mapper.BrandMapper;
+import com.example.rentACarProject.dto.requests.create.CreateBrandRequest;
+import com.example.rentACarProject.dto.requests.update.UpdateBrandRequest;
+import com.example.rentACarProject.dto.responses.BrandResponse;
+import com.example.rentACarProject.repository.BrandRepository;
+import com.example.rentACarProject.entity.Brand;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
 public class BrandManager implements BrandService {
     private final BrandRepository brandRepository;
-    private final ModelMapperService modelMapperService;
+    private final BrandMapper brandMapper;
     private final BrandBusinessRules brandBusinessRules;
 
     @Override
-    public List<GetAllBrandResponse> getAll() {
+    public List<BrandResponse> getAll() {
         List<Brand> brands = brandRepository.findAll();
         return brands.stream()
-                .map(brand -> this.modelMapperService
-                        .forResponse()
-                        .map(brand, GetAllBrandResponse.class))
-                .collect(Collectors.toList());
+                .map(brandMapper::toResponse)
+                .toList();
+    }
+
+
+    @Override
+    public BrandResponse getById(Long id) {
+        Brand brand = this.brandRepository.findById(id)
+                .orElseThrow(() -> new BusinessException("Brand with id " + id + " does not exist"));
+
+        return brandMapper.toResponse(brand);
     }
 
     @Override
-    public GetByIdBrandResponse getById(int id) {
-        this.brandBusinessRules.checkIfBrandIdExists(id);
-        Brand returnedBrand = this.brandRepository.findById(id).orElseThrow();
+    public BrandResponse add(CreateBrandRequest request) {
+        this.brandBusinessRules.checkIfBrandNameExists(request.getName());
+        Brand brand = brandMapper.toEntity(request);
+        Brand saved = brandRepository.save(brand);
 
-        return this.modelMapperService
-                .forResponse()
-                .map(returnedBrand, GetByIdBrandResponse.class);
+        return brandMapper.toResponse(saved);
     }
 
     @Override
-    public void add(CreateBrandRequest createBrandRequest) {
-        this.brandBusinessRules.checkIfBrandNameExists(createBrandRequest.getName());
-        Brand brand = this.modelMapperService
-                .forRequest()
-                .map(createBrandRequest, Brand.class);
+    public BrandResponse update(Long id, UpdateBrandRequest request) {
+        brandBusinessRules.checkIfBrandIdExists(id);
+        Brand brand = brandRepository.findById(id)
+                .orElseThrow(() -> new BusinessException("Brand with id " + id + " does not exist"));
+        Brand saved = this.brandRepository.save(brand);
 
-        this.brandRepository.save(brand);
+        return brandMapper.toResponse(saved);
     }
 
     @Override
-    public void update(UpdateBrandRequest updateBrandRequest) {
-        Brand brand = this.modelMapperService
-                .forRequest()
-                .map(updateBrandRequest, Brand.class);
+    public void delete(Long id) {
+        Brand brand = this.brandRepository.findById(id)
+                .orElseThrow(() -> new BusinessException("Brand with id " + id + " does not exist"));
 
-        this.brandRepository.save(brand);
+        brandRepository.delete(brand);
     }
 
-    @Override
-    public void delete(int id) {
-        this.brandRepository.findById(id).ifPresent(this.brandRepository::delete);
-    }
-
-    @Override
-    public Brand getBrandById(int id) {
-        return this.brandRepository.findById(id).get();
-    }
 
 }
